style.css
:root {
    --soft-orange:hsl(35, 77%, 62%);
    --soft-red:hsl(5, 85%, 63%);
    --off-white:hsl(36, 100%, 99%);
    --gray-blue:hsl(233, 8%, 79%);
    --dark-blue:hsl(236, 13%, 42%);
    --very-dark-blue:hsl(240, 100%, 5%);
}    
 
body {
    font-family: 'Inter', sans-serif;
    margin:0;
    margin-left: 250px;
    margin-right: 250px;
background-color: #000000;

}

#container {
    background-color: #ffffff;
    padding: 50px 150px 50px 150px;
    height:100%;
}

/*nav*/
nav {
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    color: var(--dark-blue);
    margin-bottom:50px;
}
#nav-list {
    list-style: none;
    display: flex;
    flex-direction: row;
}

#nav-list > li {
    padding-left:40px;
}

#nav-list li:hover {
    color: var(--soft-red);
    cursor: pointer;
}

/*main articles sections*/
#main-articles {
    display:flex;
    flex-direction: row;
    margin-bottom:50px;
}

#spotlight-article {
    width:65%;
    display:flex;
    flex-direction: column;
}

#spotlight-article img {
    width:100%;
    margin-bottom:20px;
}

.spotlight-article-container {
    display:flex;
    flex-direction:row;
    padding:10px;
    justify-content: space-between;
}

.spotlight-article-headline {
    width:45%;
    color: var(--very-dark-blue);
    font-size:50px;
    font-weight: 700;
}

.spotlight-article-copy-container {
width: 45%;
display:flex;
flex-direction: column;
justify-content: space-between;
}

.spotlight-article-description {
    color: var(--dark-blue);
    font-size:15px;
    line-height: 1.5em;
}

#spotlight-button {
    text-transform: uppercase;
    padding: 10px 40px;
    font-size:20px;
    font-weight: 700;
    background-color: var(--soft-red);
    color: var(--off-white);
    border:none;
}

#spotlight-button:hover {
background-color: var(--very-dark-blue);
cursor: pointer;
}

/* spotlight article section */


/* new articles */
#new-articles {
    width:35%;
    background-color: var(--very-dark-blue);
    color: var(--off-white);
    padding:30px;
    margin-left: 25px;
}

.new-articles-item-headline {
    font-weight: 700;
    padding-bottom:10px;
    font-size:20px;
}

.new-articles-item-headline:hover {
    color: var(--soft-orange);
    cursor: pointer;
}

.new-articles-item-description {
font-size:15px;
opacity: .5;
}

#new-headline {
    font-size: 38px;
    font-weight: 700;
    color: var(--soft-orange);
    padding-bottom:30px;
}

#new-articles hr {
    margin-top: 30px;
    margin-bottom:30px;
}




/*top articles*/
#top-articles {
    display: flex;
    margin-bottom:50px;
}

.top-articles-card {
    display: flex;
    height:125px;
    margin:5px;
}

.top-articles-card img{
padding-right: 10px;
}

.top-articles-card-text {
    display:flex;
    flex-direction: column;
    justify-content: space-around;
}
.top-articles-card-text p {
    padding:0;
    margin:0;
}
.top-articles-card p:nth-of-type(1) {
    color: var(--dark-blue);
    font-size: 28px;
    font-weight: 700;
    opacity: .5;
}

.top-articles-card p:nth-of-type(2) {
    color: var(--very-dark-blue);
    font-weight: 700;
}
.top-articles-card p:nth-of-type(2):hover {
    color: var(--soft-orange);
    cursor: pointer;
}
.top-articles-card p:nth-of-type(3) {
    color: var(--dark-blue);
    font-size:15px;
}

